--- a/Oef2/Views/HomeBis/Index.cshtml
+++ b/Oef2/Views/HomeBis/Index.cshtml
@@ -11,7 +11,12 @@
     <title>Index</title>
 </head>
 <body>
-    <div> 
+    <div>
+        <form method="get">
+            <label for="naam">Vul uw naam in: </label>
+            <input name="naam" type="text" />
+            <input type="submit" value="Verzenden" />
+        </form>
     </div>
 </body>
 </html>
