--- a/Oef2/Views/HomeBis/SecondPage.cshtml
+++ b/Oef2/Views/HomeBis/SecondPage.cshtml
@@ -11,7 +11,8 @@
     <title>SecondPage</title>
 </head>
 <body>
-    <div> 
+    <div>
+        <h1>@ViewBag.naam</h1>
     </div>
 </body>
 </html>
